--- a/OeuvreSociale/api/package.json
+++ b/OeuvreSociale/api/package.json
@@ -11,16 +11,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.20.2",
+    "body-parser": "^1.20.2"
+  },
+  "devDependencies": {
+    "body-parse": "^0.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "express-session": "^1.18.0",
     "helmet": "^7.1.0",
-    "mongoose": "^8.2.0",
-    "morgan": "^1.10.0"
-  },
-  "devDependencies": {
+    "mongoose": "^8.2.1",
+    "morgan": "^1.10.0",
     "nodemon": "^3.1.0"
   }
 }
