--- a/OeuvreSociale/api/package.json
+++ b/OeuvreSociale/api/package.json
@@ -10,9 +10,10 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-
   "devDependencies": {
-    "body-parse": "^0.1.0",
+    "nodemon": "^3.1.0"
+  },
+  "dependencies": {
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "connect-mongo": "^5.1.0",
@@ -20,14 +21,12 @@
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "express-session": "^1.18.0",
+    "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.2.0",
+    "mongoose": "^8.2.1",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.12",
     "otp-generator": "^4.0.1"
-  },
-  "devDependencies": {
-
-    "nodemon": "^3.1.0"
   }
 }
