--- a/OeuvreSociale/api/package.json
+++ b/OeuvreSociale/api/package.json
@@ -15,6 +15,7 @@
     "prettier": "^3.2.5"
   },
   "dependencies": {
+    "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "connect-mongo": "^5.1.0",
@@ -22,6 +23,7 @@
     "crypto-js": "^4.2.0",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
+    "express-rate-limit": "^7.2.0",
     "express-session": "^1.18.0",
     "filepond": "^4.30.6",
     "gridfs-stream": "^1.1.1",
@@ -31,7 +33,7 @@
     "mongodb": "^5.9.1",
     "mongoose": "^8.2.1",
     "morgan": "^1.10.0",
-    "multer": "^1.4.5-lts.1",
+    "multer": "^1.4.2",
     "multer-gridfs-storage": "^5.0.2",
     "nodemailer": "^6.9.12",
     "otp-generator": "^4.0.1",
